--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server.ts",
-    "start:dev": "nodemon ./server.ts",
+    "dev": "nodemon ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -28,10 +28,13 @@
     "@sendgrid/mail": "^7.7.0",
     "@sideway/address": "^5.0.0",
     "@sideway/formula": "^3.0.1",
+    "avatar-initials": "^6.0.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jimp": "^0.22.10",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.0",
