--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server.ts",
+    "start": "ts-node ./server.ts",
     "dev": "nodemon ./server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
     "eslint": "7.19.0",
@@ -21,7 +22,9 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
+    "jest": "^29.6.2",
     "nodemon": "2.0.15",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -40,6 +43,8 @@
     "mongoose": "^7.4.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   }
 }
