--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon ./server.ts",
     "test": "jest"
   },
+  "engines": {
+    "node": "18.6.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
