--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./server.ts",
+    "build": "tsc",
+    "start": "node ./build/server.js",
     "dev": "nodemon ./server.ts",
     "test": "jest"
   },
