--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./build/server.js",
+    "start": "node ./server.js",
     "dev": "nodemon ./server.ts",
     "test": "jest"
   },
