--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sideway/formula": "^3.0.1",
     "avatar-initials": "^6.0.0",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "dotenv": "^16.3.1",
@@ -47,6 +48,7 @@
     "mongoose": "^7.4.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.4",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1"
